Stopped some text overlapping on the login page.

--- a/wordpress/wp-content/themes/twentysixteen/style.css
+++ b/wordpress/wp-content/themes/twentysixteen/style.css
@@ -187,6 +187,10 @@ form input{
   width: 80%;
 }
 
+.link-text{
+  margin-top: 5%;
+}
+
 label, input {
     display: inline-block;
     font-family: 'CutiveMono-Regular';
